trunk/Archive/bc9bfc51281848f9902388459ed96a0a-3afcc3bc1f2cd10b247c33a6cde9edad/output
+ g++ -std=c++1y -Wall -Wextra -pedantic-errors -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:4:5: error: static assertion failed: #1
     static_assert(std::is_same<decltype("abc"), const char[4]>::value, "#1");
     ^
